# moosecli

./: .gitignore  .pre-commit-config.yaml  README.md  build-pex.sh  noxfile.py  pyoxidizer.bzl  pyproject.toml  tasks.py
.github/workflows/: build-pyoxidizer.yml  build-scie.yaml  build-with-nuittka.yaml  build.yaml  pin-for-pyoxidizer.yml  pyoxidizer.yml
moosecli/: __init__.py  __main__.py  _package.py  lib.py
requirements/: pyoxidizer-darwin.txt
tests/: test_lib.py  test_version.py
